Add IP controllers
